# ChangeLog for vmware overlay
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $ Id: $

  05 Feb 2008; Mike Auty <ikelos@gentoo.org>
  +app-emulation/open-vm-tools/files/open-vm-tools-as-needed.patch:
  Fix bug #208741.

  30 Jan 2008; Mike Auty <ikelos@gentoo.org>
  app-emulation/open-vm-tools/Manifest:
  Fix manifest.

  30 Jan 2008; Mike Auty <ikelos@gentoo.org>
  -app-emulation/open-vm-tools/files/open-vm-tools-kernel_stdint-soren.patch
  :
  Fix left over patch, remove old version.

  30 Jan 2008; Mike Auty <ikelos@gentoo.org>
  +app-emulation/open-vm-tools/open-vm-tools-0.0.20080123.74039.ebuild:
  Bump open-vm-tools.

  28 Jan 2008; Mike Auty <ikelos@gentoo.org>
  -app-emulation/open-vm-tools/files/open-vm-tools-hardened.patch,
  +app-emulation/open-vm-tools/files/open-vm-tools-kernel_stdint-soren.patch
  :
  Fix open-vm-tools kernel detection and build issues with 2.6.24.

  26 Jan 2008; Mike Auty <ikelos@gentoo.org> eclass/vmware-mod.eclass:
  Fix gtkmm with USE=accessibility requirements in vmware-player.

  12 Jan 2008; Mike Auty <ikelos@gentoo.org>
  app-emulation/open-vm-tools/open-vm-tools-0.0.20071121.64693-r1.ebuild:
  Fix up pam file installation, bug 205087.

  12 Jan 2008; Mike Auty <ikelos@gentoo.org>
  app-emulation/vmware-modules/files/1.0.0.17-update115-nasty-hack.patch,
  +app-emulation/vmware-modules/files/patches/vmmon/030_all_fix-linux-header
  s.patch, eclass/vmware-mod.eclass:
  Apply the linux header patch to all -r1 ebuilds.
  Remove original 1.0.0.17 ebuild.
  Ensure patches are only applied to -r1 ebuilds.

  09 Jan 2008; Mike Auty <ikelos@gentoo.org>
  app-emulation/open-vm-tools/open-vm-tools-0.0.20071121.64693-r1.ebuild:
  Fix up further ${ROOT} issues pointed out by Jakub.  5;)

  09 Jan 2008; Mike Auty <ikelos@gentoo.org>
  app-emulation/open-vm-tools/open-vm-tools-0.0.20071121.64693-r1.ebuild:
  Fix up $ROOT usage in open-vm-tools.

  06 Jan 2008; Mike Auty <ikelos@gentoo.org>