@@ -5,4 +5,6 @@ AUX open-vm.initd 1758 RMD160 49d9bf6d72cce10fc2582e595c4015a827f9f612 SHA1 7497
 AUX tools.conf 21 RMD160 88b5b8c8e088333e9c00b2e1c3f3572553342e7b SHA1 42a670b887751dbe9317624dd11068390d1780b0 SHA256 05dcb62e54991ca5546066e4d04b50be98fb0cc229168d4d73df8cf8a94c068c
 AUX xautostart.conf 59 RMD160 ca1ea3f1b82caa6e97d94835d88a39a6f153ff7a SHA1 92ba86e426fdaa3de1a8aad56db2d2ac358949a1 SHA256 13398e0ffcd7005bc8c92f3cd62865d2601e52fc980a4702fa252bef5c1efcc7
 DIST open-vm-tools-2008.01.23-74039.tar.gz 2332290 RMD160 b8a78e28abb63f50b5b9f49ad5ebaa727eee4619 SHA1 9d3fb1c2b71533a6d6ee67ee8bbf21edb26e9d59 SHA256 78754c0ab0cb39aad96d80bd1ade4ac2174c4067625d603e2a6afcce6359cace
+DIST open-vm-tools-2008.02.13-77928.tar.gz 2373549 RMD160 cc6c4d27b3967496de84b7544132df3576c10bb5 SHA1 253ae287a810508d359344a81ddefdc31cd28eda SHA256 a8ad25dc139e1b63e78cfa518038699f61ae7af1988e67e7d25bf6192558b13d
 EBUILD open-vm-tools-0.0.20080123.74039.ebuild 3533 RMD160 c9c481d318e7060d452ddbd8d18270a4894d8fd1 SHA1 63040aea42e9f44f487e905081c30c30d5dc42f6 SHA256 fbde5bcb91f0675a50aa0ef21d01244ee81c01f4e40a89039d22138e8a4e5da2
+EBUILD open-vm-tools-0.0.20080213.77928.ebuild 3533 RMD160 c9c481d318e7060d452ddbd8d18270a4894d8fd1 SHA1 63040aea42e9f44f487e905081c30c30d5dc42f6 SHA256 fbde5bcb91f0675a50aa0ef21d01244ee81c01f4e40a89039d22138e8a4e5da2
